# networking-manila

./: .gitignore  README.rst  requirements.txt  setup.cfg
etc/neutron/plugins/ml2/: ml2_conf_manila.ini
networking_manila_ml2/: _i18n.py
networking_manila_ml2/plugins/ml2/drivers/mech_manila/: config.py  constants.py  driver.py
