[metadata]
name = networking_manila
summary = This project tracks the work to provide a Neutron ML2 bindings for Manila ports
version = 2018.1.1
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP SE
author-email = andrew.battye@sap.com
home-page = http://www.sap.com/
url = https://github.com/sapcc/networking-manila
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron manila ML2 networking

[files]
packages = networking_manila_ml2
data_files =
    /etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_manila.ini

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_manila_ml2/locale
domain = networking_manila_ml2

[update_catalog]
domain = networking_manila_ml2
output_dir = networking_manila_ml2/locale
input_file = networking_manila_ml2/locale/networking-manila-ml2.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_manila_ml2/locale/networking-manila-ml2.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    manila = networking_manila_ml2.plugins.ml2.drivers.mech_manila.driver:ManilaMechanismDriver
